prod bug on firefox - FA icons render huge on load, overflow?

--- a/next/styles/_globals.scss
+++ b/next/styles/_globals.scss
@@ -17,6 +17,7 @@ body {
 	letter-spacing: 0.05rem;
 	font-family: 'Roboto', sans-serif;
 	font-size: $font-med;
+	overflow-x: hidden;
 }
 
 *,
